salesforce/AgentCareHospital/force-app/main/default/objects/Health_Report__c/Health_Report__c.object-meta.xml
<CustomObject>
    <label>Health Report</label>
    <nameField>
        <label>Health Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Health Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>