salesforce/AgentCareHospital/force-app/main/default/objects/Health_Report__c/fields/Health_Summary__c.field-meta.xml
<CustomField>
    <fullName>Health_Summary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Health Summary</label>
    <referenceTo>Health_Summary__c</referenceTo>
    <relationshipLabel>Health Reports</relationshipLabel>
    <relationshipName>Health_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>