salesforce/AgentCareHospital/force-app/main/default/objects/Health_Report__c/fields/Report_Content__c.field-meta.xml
<CustomField>
    <fullName>Report_Content__c</fullName>
    <label>Report Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>