salesforce/AgentCareHospital/force-app/main/default/objects/Health_Report__c/fields/Report_Name__c.field-meta.xml
<CustomField>
    <fullName>Report_Name__c</fullName>
    <label>Report Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>