salesforce/AgentCareHospital/force-app/main/default/objects/Health_Report__c/fields/Report_Type__c.field-meta.xml
<CustomField>
    <fullName>Report_Type__c</fullName>
    <label>Report Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lab Test</fullName>
            </value>
            <value>
                <fullName>CT Scan &amp; MRI</fullName>
            </value>
            <value>
                <fullName>Doctor Note</fullName>
            </value>
            <value>
                <fullName>Prescriptions</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>